--- a/PBHLTH W251 Project Milestone 6.Rmd
+++ b/PBHLTH W251 Project Milestone 6.Rmd
@@ -61,7 +61,7 @@ print(final_data_renamed)
 ```{r, warning=FALSE, include = FALSE, message=FALSE}
 
 # Removing the 12th column from final_data_renamed
-final_clean_data <- final_data_renamed[,-12]
+final_clean_data <- final_data_renamed[ ,-12]
 
 # Renaming the "COUNTY NAME.X" column to "COUNTY NAME"
 final_clean_data <- final_clean_data %>%
@@ -101,13 +101,13 @@ ggplot(final_clean_data, aes(x = `CUMULATIVE SEVERE`, y = `VACCINATION RATE`, co
   geom_text(data = subset(final_clean_data, `AGE CAT` == "0-17"),
             aes(label = paste(round(`CUMULATIVE SEVERE`, 2), ", ", round(`VACCINATION RATE`, 2))),
             position = position_nudge(x = -5), size = 3, show.legend = FALSE, hjust = 5) +  # Moving label to the left
-  labs(title = " Flu Severity vs COVID-19 Vaccination Rates by Age Category in 
+  labs(title = " Flu Severity vs. COVID-19 Vaccination Rates by Age Category in 
        Alameda County for the second quarter of 2023",
        x = "Cumulative Severe Flu Cases",
        y = "Vaccination Rate",
        caption = "Figure 1: This plot shows the cumulative number of severe flu cases and the COVID-19 vaccination rates across 
-different age categories in Alameda county during the second quarter of 2023. The plot shows that as age increases 
-the total number of severe flu cases and the COVID-19 vaccination rate increased as well.") +
+different age categories in Alameda County during the second quarter of calendar year 2023. The plot shows that as age increases, 
+the total number of severe flu cases and the COVID-19 vaccination rate increases as well.") +
   theme_minimal() + theme(axis.line = element_line(size = 0.5),
                           plot.caption = element_text(hjust = 0))
 ```
